@@ -3,6 +3,8 @@ Revision history for DBD-Cassandra
 0.09    2015/04/20
         Avoid double-encoding UTF-8 strings when passed in without the right flags
         Automatically prune the prepare() cache to avoid memory leaks
+        Add support for the 'TIMESTAMP' type
+        Boolean types are now actually inserted as booleans
 
 0.08    2015/04/17
         Avoid causing trouble when disconnecting an inactive handle
